# tap-datadog

./: README.md  environment.yml  meltano.yml  pyproject.toml
tap_datadog/: client.py  tap.py
tap_datadog/streams/: __init__.py  events.py  permissions.py  roles.py  rum_applications.py  rum_events.py  users.py
